Handled the alignment of no projects available screen and conditions when can buttons be visible

--- a/src/SharedComponents/Header/index.scss
+++ b/src/SharedComponents/Header/index.scss
@@ -7,7 +7,7 @@
 
 .header {
   background-color: $nav-back;
-  height: 80px;
+  height: 3.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
