--- a/src/SharedComponents/SideBar/index.scss
+++ b/src/SharedComponents/SideBar/index.scss
@@ -10,6 +10,10 @@
   color: $white;
 }
 
+.icon-style {
+  margin-right: 0.5rem;
+}
+
 .ant-menu-item:hover,
 .ant-menu-item::before,
 .ant-menu-item::after {
