Added text line in no project component.

--- a/src/Modules/Project/project.scss
+++ b/src/Modules/Project/project.scss
@@ -49,3 +49,10 @@
   font-weight: 500;
   line-height: 140%; /* 1.05rem */
 }
+
+//new project text
+.new-project-text-style {
+  color: #8c8c8c;
+  font-family: Poppins;
+  font-weight: 500;
+}
