--- a/src/Shared/SharedComponents/PopOverContent/index.scss
+++ b/src/Shared/SharedComponents/PopOverContent/index.scss
@@ -1,4 +1,4 @@
-@import '../../assets/stylesheets/variables';
+@import '../../../assets/stylesheets/variables';
 
 .pop-over-content {
   border-radius: 4px;
