--- a/src/Modules/Project/project.scss
+++ b/src/Modules/Project/project.scss
@@ -1,33 +1,15 @@
 //Card Style
 .card-style {
   border-radius: 0.5rem;
-  border: 1px solid #e2e2e2;
   background: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
 }
 
-//card color strip
-.card-color-strip-purple {
-  border-radius: 0.5rem 0.5rem 0rem 0rem;
-  background: #d5c1fd;
-  height: 0.5rem;
+.draft-card-border {
+  border: 1px solid #9c55ff;
 }
-
-.card-color-strip-green {
-  border-radius: 0.5rem 0.5rem 0rem 0rem;
-  background: #9fff87;
-  height: 0.5rem;
-}
-
-//List Title
-.list-title {
-  color: #252525;
-  font-family: Poppins;
-  font-size: 1.5rem;
-  font-weight: 600;
-  padding-bottom: 1rem;
-  padding-left: 0.5rem;
-  padding-top: 0.5rem;
+.published-card-border {
+  border: 1px solid #a0eb00;
 }
 
 //Card Title
