--- a/src/Shared/SharedComponents/SideBar/index.scss
+++ b/src/Shared/SharedComponents/SideBar/index.scss
@@ -1,9 +1,10 @@
-@import '../../assets/stylesheets/variables';
+@import '../../../assets/stylesheets/variables';
 
-.sider {
+.menu-style {
   height: 100vh;
+  width: 100%;
   background: linear-gradient(180deg, #35129c 0%, #6f1fde 100%);
-  padding-top: 30px;
+  padding-top: 1.4rem;
 }
 
 .ant-menu-item {
