--- a/src/root/withLayout.scss
+++ b/src/root/withLayout.scss
@@ -1,7 +1,7 @@
 .wrapped-component-style {
   height: 100vh; /* This sets the height to 100% of the viewport height */
   overflow: auto;
-  padding: 20px;
+  padding: 1.3rem;
   box-sizing: border-box;
 }
 
