--- a/src/shared/SharedComponents/SubHeader/index.scss
+++ b/src/shared/SharedComponents/SubHeader/index.scss
@@ -10,8 +10,10 @@
   background: #35129c;
 }
 
-.search-button {
-  background-color: #9c55ff;
+.button-container {
+  .ant-btn-primary {
+    background-color: #9c55ff;
+  }
 }
 
 //List Title
