Added onHover color to search button.

--- a/src/shared/SharedComponents/SubHeader/index.scss
+++ b/src/shared/SharedComponents/SubHeader/index.scss
@@ -13,6 +13,9 @@
 .button-container {
   .ant-btn-primary {
     background-color: #9c55ff;
+    &:hover {
+      background-color: #cdb4f0 !important;
+    }
   }
 }
 
